--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     width: 815px;
     margin-left: auto;
     margin-right: auto;
-    height: 1000vh;
+   
     background-color: #e6e4e4;
 
 }
@@ -103,8 +103,10 @@
   }
   .logo{
     margin-top: 10px;
-    margin-right: 10px;
-    width: 7%;
+    margin-bottom: 10px;
+    margin-right: 30px;
+    width: 50px;
+    height: 50px;
   }
   .margn-bttom{
     margin-bottom: 60px;
@@ -241,13 +243,13 @@ th, td {
   position: relative;
   margin-top: 10px;
   width: 100%;
-  height: 300px;
-  background-image: url('reduced_page_1_lagoon.jpg');
+  height: 400px;
+  background-image: url('reduced_page_5_lagoon.jpg');
   background-size: cover;
   background-position: center;
 }
 
-.logo {
+.logo1 {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -256,4 +258,73 @@ th, td {
   background-image: url('logo.png');
   background-size: contain;
   background-repeat: no-repeat;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  width: 7%;
+}
+.tabel_container{
+  position: relative;
+}
+.tabel_position{
+object-fit: cover;
+  margin-top: -150px;
+  z-index: 10;
+position: relative;
+}
+.text-background-color{
+  margin-top: 10%;
+  padding: 25px;
+  font-weight: 900;
+  color: white;
+background-color:  #061881;
+}
+.text-body{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 50px; 
+  margin-right: 50px; 
+}
+.text-margn{
+  color: white;
+  margin-top: -10px;
+  max-width: 50%;
+}
+.text_body_space{
+margin-top: -2%;
+}
+.main-background{
+  background-color: #014fd4; 
+  padding: 10px;
+  width:80%;
+}
+.bold-it-1{
+  font-weight: 900;
+  color: #20cae0;;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.description-h1{
+  color: white;
+  font-size: large; 
+  display: inline-block; 
+  font-family: Arial, Helvetica, sans-serif;
+}
+.footer {
+  background-color: #061881;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  font-size: small;
+}
+
+/* Style for the text elements */
+.footer-text {
+  display: inline-block;
+  margin: 0 10px;
+  width: 33%;
+}
+
+/* Style for the code snippet */
+.code {
+  font-family: monospace;
+  color: #555;
+  font-size: 14px;
 }
