--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 .main-text{
     color: #061881;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 50px;
     margin-left: 50px;
     font-weight: 900;
@@ -54,7 +54,7 @@
     width: 50%;
     font-weight: 900;
     padding: 60px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
   .main2{
     display: flex;
@@ -71,7 +71,7 @@
     margin-left: auto;
     margin-right: auto;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
     font-weight: 900;
     text-align: end;
@@ -120,7 +120,7 @@
     color: white;
     font-weight: bold;
     width: 250px;
-    font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Poppins', sans-serif;
   }
   .img-container{
     position: relative;
@@ -148,7 +148,7 @@
   .bold-it{
     font-weight: 900;
     color: #0804f0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
 .descriptio-1{
     margin-left: 50px; 
@@ -164,12 +164,12 @@
 .descriptio-h1{
     font-size: large; 
     display: inline-block; 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .descriptio-p{
     margin-top: 10px;
 }
-.footer{
+.sub-footer{
     display: flex;
     justify-content: space-between;
 }
@@ -187,7 +187,7 @@
     padding: 5px;
     font-weight: 700;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Poppins', sans-serif;
 }
 .box-design1{
     display: inline-block; 
@@ -224,9 +224,11 @@ th, td {
   }
   .tabel_1_block_2{
     background-color: #98d1eb;
+    font-weight: bolder;
   }
   .tabel_1_block_3{
     background-color: #c2c2c2;
+    text-align: center;
   }
   .tabel_2{
     margin-top: 10%;
@@ -234,7 +236,7 @@ th, td {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   }
   .descriptio-2{
-    font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Poppins', sans-serif;
     margin-left: 50px; 
     margin-right: 50px; 
     margin-top: 30px;
@@ -279,7 +281,7 @@ position: relative;
 background-color:  #061881;
 }
 .text-body{
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
   margin-left: 50px; 
   margin-right: 50px; 
 }
@@ -292,6 +294,7 @@ background-color:  #061881;
 margin-top: -2%;
 }
 .main-background{
+  margin-top: 10px;
   background-color: #014fd4; 
   padding: 10px;
   width:80%;
@@ -299,15 +302,16 @@ margin-top: -2%;
 .bold-it-1{
   font-weight: 900;
   color: #20cae0;;
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .description-h1{
   color: white;
   font-size: large; 
   display: inline-block; 
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-.footer {
+.footer { 
+  display: flex;
   background-color: #061881;
   color: white;
   text-align: center;
@@ -327,4 +331,48 @@ margin-top: -2%;
   font-family: monospace;
   color: #555;
   font-size: 14px;
+}
+.tabel-text-bold{
+  color: #253f91;
+  font-weight: 900;
+  background-color: #98d1eb;
+}
+.tabel-text-bold-2{
+  background-color: #4ba9d4;
+  font-weight: bolder;
+  text-align: center;
+}
+.tabel-text-bold-3{
+  background-color: #253f91;
+  color: white;
+  font-weight: 900;
+  text-align: center;
+}
+.tabel-text-bold-4{
+  background-color: #97d2ee;
+  color: white;
+  text-align: center;
+}
+.main-background {
+  position: relative;
+}
+
+.bottom-right-photo {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: -100px;
+  width: 300px; /* Adjust the width as needed */
+  height: 400px; /* Adjust the height as needed */
+}
+.color-box-2{
+  z-index: 30;
+  position: absolute;
+  bottom: -10px;
+  right: -10px;
+  width: 100px;
+  height: 30px;
+  background-color:#3e74cf;
+  opacity: 50%;
+  margin-right: -100px;
 }
